--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -6,7 +6,7 @@
 .contact-page {
     width: 100%;
     height: 100%;
-    background-color: #f0f2fe;
+    background-color: var(--main-background-color);
 
     .cluster-infor-title {
         display: flex;
