add member asvab

--- a/src/components/about-us/index.scss
+++ b/src/components/about-us/index.scss
@@ -69,7 +69,7 @@
 
                             &:hover {
                                 border: 4px solid #ffffff;
-                                outline: 4px solid #343f82;
+                                outline: 4px solid var(--main-color);
                             }
                         }
                     }
