fix width component

--- a/src/components/about-us/cdl/header/activity/style.scss
+++ b/src/components/about-us/cdl/header/activity/style.scss
@@ -107,7 +107,13 @@
                 text-align: center;
             }
         }
+        .intro-1 {
+            transform: unset;
+        }
         .intro-2 {
+            transform: unset;
+        }
+        .intro-3 {
             transform: unset;
         }
     }
