--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -221,7 +221,7 @@
         }
 
         .cluster-faqs {
-            padding: 0 16px 48px;
+            padding: 0 0 48px 0;
             .title {
                 margin-top: 24px;
                 font-size: 30px;
