--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -56,7 +56,9 @@ p {
     }
 }
 .max-w-component-desktop {
-    max-width: 1206px;
+    max-width: 1238px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 * {
@@ -64,7 +66,9 @@ p {
 }
 
 .max-w-page {
-    max-width: 1206px;
+    max-width: 1238px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 .text-primary {
     color: var(--text-color-primary);
