--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -40,6 +40,14 @@ main {
     font-family: var(--font-poppins);
 }
 
+.scrollbar-none {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-none::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge, and Opera */
+}
 span,
 div,
 h1,
@@ -85,4 +93,3 @@ p {
 .bg-primary {
     background-color: var(--color-primary);
 }
-
