--- a/src/css/root.css
+++ b/src/css/root.css
@@ -2,6 +2,7 @@
     --color-primary: rgba(252, 167, 45, 1);
     --text-color: #212121;
     --text-color-primary: rgba(252, 167, 45, 1);
+    --text-color-primary-rgb: rgba(252, 167, 45);
     --main-background-color: #f9f7ee;
     /* --font-poppins: "Poppins-Semibold"; */
 }
