--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -36,6 +36,32 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #adadad;
 }
+
+
+@media screen and (max-width: 600px) {
+    ::-webkit-scrollbar {
+        width: 0px !important;
+        display: none !important;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #fff;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #c9c9c9;
+        border-radius: 8px;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #adadad;
+    }
+    
+}
+
 main {
     font-family: var(--font-poppins);
 }
