--- a/src/components/passing/passing.css
+++ b/src/components/passing/passing.css
@@ -3,7 +3,7 @@
     appearance: none;
     width: 100%;
     border: none;
-    height: 48px;
+    height: 100%;
     border-radius: 6px;
     background-color: #21212114;
     overflow: hidden;
